--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -26,8 +26,9 @@ jobs:
         run: bundle exec jekyll build
 
       - name: Upload _site
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
+          name: pages
           path: ./_site
 
   deploy:
